--- a/Reddit_Clone/test/fixtures/posts.yml
+++ b/Reddit_Clone/test/fixtures/posts.yml
@@ -1,4 +1,15 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: posts
+#
+#  id         :bigint           not null, primary key
+#  title      :string           not null
+#  url        :string
+#  content    :text
+#  author_id  :integer          not null
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
 
 one:
   title: MyString
